# catalyst

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  catalyst  cmake_install.cmake  compile_commands.json  flake.nix
lib/: libGLEWd.so.2.2.0
lib/glfw/glfw-3.3.7/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/glfw-3.3.7/src/: Makefile  cmake_install.cmake  glfw3ConfigVersion.cmake
res/shaders/: basic.fshdr  basic.vshdr
src/: AttributeOrder.cpp  AttributeOrder.hpp  Catalyst.cpp  IndexBuffer.cpp  IndexBuffer.hpp  InputHandler.cpp  InputHandler.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Viewport.hpp  Window.cpp  Window.hpp  glewntape.hpp
